--- a/public/components/facet/facet.jade
+++ b/public/components/facet/facet.jade
@@ -1,24 +1,31 @@
 .form-group    
-  label {{label}}
-  .clear-input
-    input.input-sm.margin-bottom.form-control(type="text", ng-model="search._id", placeholder="Search...")
-    .fa.fa-times-circle.clear-input-icon(ng-click="search._id = ''", ng-show="search._id.length")
+  label {{label}} 
+    span.text-muted(ng-show="subgroup") {{subgroup}} 
 
-  div.margin-bottom
-    a.small(ng-click="open=!open") {{ open ? 'Show selected only' : 'Show all' }}
-      
-  .mini-table(ng-show="uniques.length")
-    table.table
-      tbody
-        tr(ng-repeat="u in filtered = (uniques | filter:search | orderBy:['-count'])", ng-class="{ closed: !u.count }", ng-show="open || u.selected")
-          td
-            .checkbox
-              label
-                input(type="checkbox", ng-model="u.selected", ng-change="refresh(u)", ng-disabled="!u.count")
-                span {{u._id}} 
-                span.text-light.pull-right {{u.count}}
-        tr(ng-show='!filtered.length')
-          td 
-            span.text-light Sorry, no results for 
-              strong {{search._id}}
-  
+  .facet-wrapper
+    
+    .facet-overlay(ng-show="false")
+      span.text-muted.small Loading...
+
+    .clear-input
+      input.input-sm.margin-bottom.form-control(type="text", ng-model="search._id", placeholder="Search...")
+      .fa.fa-times-circle.clear-input-icon(ng-click="search._id = ''", ng-show="search._id.length")
+
+    div.margin-bottom(ng-show="uniques.length")
+      a.small(ng-click="open=!open") {{ open ? 'Show selected only' : 'Show all' }}  
+    
+    .mini-table(ng-show="uniques.length")
+      table.table
+        tbody
+          tr(ng-repeat="u in filtered = (uniques | filter:search | orderBy:['-count'])", ng-class="{ closed: !u.count }", ng-show="open || u.selected")
+            td
+              .checkbox
+                label
+                  input(type="checkbox", ng-model="u.selected", ng-change="refresh(u)", ng-disabled="!u.count")
+                  span {{u._id}} 
+                  span.text-light.pull-right {{u.count}}
+          tr(ng-show='!filtered.length')
+            td 
+              span.text-light Sorry, no results for 
+                strong {{search._id}}
+    
