Added server support for Search queries with exact year, month and day; haven't updated client yet.

--- a/public/search/search.jade
+++ b/public/search/search.jade
@@ -172,9 +172,9 @@
             typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100")
           input.input-sm.form-control.margin-top(
             type="text", 
-            ng-model="travelDateQuery.at",
+            ng-model="travelDateQuery.atYear",
             placeholder="year",
-            ng-class="{ filled : travelDateQuery.at }"
+            ng-class="{ filled : travelDateQuery.atYear }"
             ng-show="travelDateQueryType === 'exact'")
           input.input-sm.form-control.margin-top(
             type="text", 
