changed to giovanna

--- a/public/main/main.jade
+++ b/public/main/main.jade
@@ -26,5 +26,5 @@
       p.text-serif The tool is still under construction; private beta version currently being tested with the support of John Brewer, Melissa Calaresu, Jeffrey Collins, Paul Davis, Tamara Griggs, Christopher Johns, Jane Kamensky, Simon Macdonald, Rebecca Messbarger, Barbara Naddeo, Carole Paul, Molly Taylor-Poleskey, Sophus Reinert, Rosemary Sweet.
 
 
-      p.text-serif For information about the project, please contact Molly Taylor-Poleskey at 
-        a(href="mailto:mollygtaylor@gmail.com") mollygtaylor@gmail.com
+      p.text-serif For information about the project, please contact Giovanna Ceserani at 
+        a(href="mailto:ceserani@stanford.edu") ceserani@stanford.edu
