Work in progress: making lists page.

--- a/public/index.jade
+++ b/public/index.jade
@@ -29,6 +29,9 @@ html(lang="en", ng-app="app")
             li
               a(ui-sref="explore") Explore 
                 sup (beta)
+            li
+              a(ui-sref="lists") Saved Lists
+                sup (beta)
                               
           ul.nav.navbar-nav.navbar-right(ng-show="currentUser")
             li(ng-show="currentUser.role=='admin'")
@@ -76,5 +79,6 @@ html(lang="en", ng-app="app")
     script(type='text/javascript', src='/search/search.js')
     script(type='text/javascript', src='/explore/explore.js')
     script(type='text/javascript', src='/entry/entry.js')
+    script(type='text/javascript', src='/lists/lists.js')
 
     script(type='text/javascript', src='/components/facet/facet.js')
